# mouse_ocr_editor

./: README.md  charlesUtil.py  main.py  pyproject.toml
